XWIKI-22581: FocusCatcher input has no label * Fixed the full screen display vertical overflow issue.

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/gallery/gallery.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/gallery/gallery.css
@@ -2,6 +2,7 @@
   background-color: black;
   max-width: 100%;
   padding: 10px;
+  border-radius: 7px; /* Same value as @border-radius-base from Flamingo. */
   /* Position relative is required because some of the inner elements have position absolute and the gallery container
   must be their offset parent. */
   position: relative;
@@ -22,16 +23,19 @@
   top: 0;
   z-index: 1001;
   width: 100% !important;
+  border-radius: 0;
 }
 
-.xGallery .image-container {
+.xGallery .currentImage {
   grid-area: 2 / 2 / 3 / 3;
-  display: inline-flex;
-  align-content: center;
-  justify-content: center;
-}
-.xGallery .image-container .currentImage {
+  align-self: center;
+  justify-self: center;
   object-fit: scale-down;
+  max-width: 100%;
+  max-height: 100%;
+  /* Address an issue with the CSS Grid blowing out with large pictures */
+  height: auto;  
+  width: 100%;
 }
 
 /* Transparent buttons that should fill the space they've been given on the grid*/
@@ -48,7 +52,6 @@
   font-family: courier,monospace;
   font-size: 32px;
   font-weight: 100;
-  line-height: 124px;
   text-align: center;
 }
 
@@ -70,7 +73,7 @@
   font-size: smaller;
   line-height: 1;
   grid-area: 3 / 1 / 4 / 2;
-  align-content: end;
+  align-self: end;
 }
 
 .xGallery .loading {
